--- a/WebRoot/login.htm
+++ b/WebRoot/login.htm
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div id="login-page" class="container">
-			<h1>日记本登录</h1>
+			<h1>日记本登录第二次修改</h1>
 			<form id="login-form" class="well" action="Servlet/UserServlet" method="POST"">
 			<input  type="hidden" name="topic"  value="登录" /><br />
 			<input type="text" class="span2" placeholder="Email" id="email" name="email" /><br />
